<resources>
    <string name="app_name">Muscle</string>
    <string name="title_home">トレーニング</string>
    <string name="title_dashboard">ダッシュボード</string>
    <string name="title_setting">設定</string>

    <string name="no_data">データなし</string>

    <string name="name">ニックネーム</string>
    <string name="example_name">たかし</string>
    <string name="height">身長 (必須項目)</string>
    <string name="example_height">172.0</string>
    <string name="weight">体重 (必須項目)</string>
    <string name="example_weight">60.0</string>
    <string name="sex">性別 (必須項目)</string>
    <string name="male_button">男性</string>
    <string name="female_button">女性</string>
    <string name="other_button">その他</string>
    <string name="fat_percent">体脂肪率</string>
    <string name="example_fat">18</string>
    <string name="percent">%</string>
    <string name="submit">決定</string>

    <string name="normal_mode">一人でトレーニング</string>
    <string name="coop_mode">協力トレーニング</string>
    <string name="battle_mode">対戦トレーニング</string>

    <string name="sets">セット数</string>
    <string name="times">1セットの回数</string>
    <string name="rest">休憩時間</string>
    <string name="sets_unit">セット</string>
    <string name="times_unit">回</string>
    <string name="rest_unit">秒</string>

    <string-array name="menus">
        <item>腕立て伏せ</item>
        <item>上体起こし</item>
        <!-- <item>ウォーキング・ランニング</item>
        <item>クランチ</item>
        <item>スクワット</item> -->
    </string-array>

    <string name="desc_pushup">
        胸・腕の筋肉トレーニング
    </string>
    <string-array name="howto_pushup">
        <item>体を真っ直ぐにする</item>
        <item>胸を張りながら、腕を肩幅より少し広く伸ばす</item>
        <item>スマホを胸の辺りに置き、腕を曲げる</item>
    </string-array>

    <string name="desc_situp">
        腹の筋肉トレーニング
    </string>
    <string-array name="howto_situp">
        <item>膝を曲げて仰向けになって寝る</item>
        <item>胸の前で手を組む</item>
        <item>スマホを太腿の辺りに置き、上半身を太腿へ近づける</item>
    </string-array>

    <string name="desc_run">
        有酸素運動
    </string>
    <string-array name="howto_run">
        <item>靴を履いて外に出る</item>
    </string-array>

    <string-array name="howto_crunch">
        <item>ETST</item>
    </string-array>

    <string-array name="howto_squat">
        <item>TEST</item>
    </string-array>

    <string name="today_label_calories">今日の消費カロリー :</string>
    <string name="today_label_weight">体重  :</string>
    <string name="today_label_bmi">BMI(肥満度)  :</string>

    <string name="header_user_info">ユーザ情報</string>
    <string name="header_body_info">身体情報</string>
    <string name="item_name">名前</string>
    <string name="item_sex">性別</string>
    <string name="item_chg_body">身長/体重/体脂肪の変更</string>
    
    <string name="label_height">身長</string>
    <string name="label_weight">体重</string>
    <string name="label_fat">体脂肪率</string>
</resources>