<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.drekaz.muscle.ui.first_launch.FirstLaunchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/name"
            android:textSize="@dimen/font_normal"
            />
        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_name"
            android:layout_margin="@dimen/spacing_normal"
            android:inputType="textPersonName"
            android:hint="@string/example_name"
            android:autofillHints=""
            />

        <TextView
            android:id="@+id/label_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/input_name"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/height"
            android:textSize="@dimen/font_normal"
            />
        <EditText
            android:id="@+id/input_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_height"
            android:layout_margin="@dimen/spacing_normal"
            android:inputType="numberDecimal"
            android:hint="@string/example_height"
            android:autofillHints=""
            />

        <TextView
            android:id="@+id/label_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/input_height"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/weight"
            android:textSize="@dimen/font_normal"
            />
        <EditText
            android:id="@+id/input_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_weight"
            android:layout_margin="@dimen/spacing_normal"
            android:inputType="numberDecimal"
            android:hint="@string/example_weight"
            android:autofillHints=""
            />

        <TextView
            android:id="@+id/label_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/input_weight"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/sex"
            android:textSize="@dimen/font_normal"
            />
        <RadioGroup
            android:id="@+id/group_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_sex">
            <RadioButton
                android:id="@+id/male_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_button"/>
            <RadioButton
                android:id="@+id/female_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_button" />
            <RadioButton
                android:id="@+id/other_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_button" />
        </RadioGroup>

        <TextView
            android:id="@+id/label_fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/group_sex"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/fat_percent"
            android:textSize="@dimen/font_normal"
            />
        <EditText
            android:id="@+id/input_fat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/label_fat"
            app:layout_constraintEnd_toStartOf="@+id/label_percent"
            android:layout_margin="@dimen/spacing_normal"
            android:inputType="number"
            android:hint="@string/example_fat"
            android:autofillHints=""
            />
        <TextView
            android:id="@+id/label_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:textSize="@dimen/font_large"
            app:layout_constraintStart_toEndOf="@+id/input_fat"
            app:layout_constraintBottom_toBottomOf="@+id/input_fat"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/input_fat"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:background="@color/deep_blue"
            android:enabled="@{vm.isEnabled}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>