<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_height"
        android:autofillHints=""
        android:inputType="numberDecimal"
        tools:ignore="LabelFor"
        />
    <EditText
        android:id="@+id/edit_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_weight"
        android:autofillHints=""
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />
    <EditText
        android:id="@+id/edit_fat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_fat"
        android:autofillHints=""
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />
</LinearLayout>