<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <NumberPicker
        android:id="@+id/sets_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sets_unit_text"
        />
    <TextView
        android:id="@+id/sets_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sets_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/times_text"
        android:text="@string/sets"
        />
    <TextView
        android:id="@+id/sets_unit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/sets_picker"
        app:layout_constraintEnd_toStartOf="@id/times_picker"
        android:text="@string/sets_unit"
        />

    <NumberPicker
        android:id="@+id/times_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/sets_unit_text"
        app:layout_constraintEnd_toStartOf="@id/times_unit_text"
        />
    <TextView
        android:id="@+id/times_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/times_picker"
        app:layout_constraintStart_toEndOf="@id/sets_text"
        app:layout_constraintEnd_toStartOf="@id/rest_text"
        android:text="@string/times"
        />
    <TextView
        android:id="@+id/times_unit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/times_picker"
        app:layout_constraintEnd_toStartOf="@id/rest_picker"
        android:text="@string/times_unit"
        />

    <NumberPicker
        android:id="@+id/rest_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/times_unit_text"
        app:layout_constraintEnd_toStartOf="@id/rest_unit_text"
        />
    <TextView
        android:id="@+id/rest_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rest_picker"
        app:layout_constraintStart_toEndOf="@id/times_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rest"
        />
    <TextView
        android:id="@+id/rest_unit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/rest_picker"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rest_unit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
