<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_training_menu">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.drekaz.muscle.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_menu"
            app:destination="@id/fragment_training_menu"
            app:popUpTo="@id/navigation_home"
            />
    </fragment>
    <fragment
        android:id="@+id/fragment_training_menu"
        android:name="com.drekaz.muscle.ui.training_menu.TrainingMenuFragment"
        tools:layout="@layout/fragment_training_menu">
        <action
            android:id="@+id/action_menu_sensor"
            app:destination="@id/fragment_sensor_training"
            />
        <action
            android:id="@+id/action_menu_gps"
            app:destination="@+id/fragment_gps_training"
            />
    </fragment>
    <fragment
        android:id="@+id/fragment_sensor_training"
        android:name="com.drekaz.muscle.ui.training.TrainingSensorFragment"
        tools:layout="@layout/fragment_sensor_training">
        <argument
            android:name="menu_element"
            app:argType="string"
            android:defaultValue="default"
            />
        <action
            android:id="@+id/action_training_menu"
            app:destination="@id/fragment_training_menu"
            app:popUpTo="@id/fragment_training_menu"
            />
    </fragment>
    <fragment
        android:id="@+id/fragment_gps_training"
        android:name="com.drekaz.muscle.ui.training.TrainingGPSFragment"
        tools:layout="@layout/fragment_sensor_training">
        <argument
            android:name="menu_element"
            app:argType="string"
            android:defaultValue="default"
            />
        <action
            android:id="@+id/action_training_menu"
            app:destination="@id/fragment_training_menu"
            app:popUpTo="@id/fragment_training_menu"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.drekaz.muscle.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.drekaz.muscle.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>